syntax = "proto3";

package admin;

option go_package = "./proto;admin";

service Admin {
  rpc DeleteData(DeleteDataRequest) returns (DeleteDataResponse) {}

}

message DeleteDataRequest {
  string user_id = 1;
}

message DeleteDataResponse {}
